[package]
name = "lyraswap"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
stellar-access = "0.7.1"
stellar-macros = "0.7.1"
stellar-tokens = "0.7.1"

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
